// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generate(workspace) — L4 block codegen > BT-L4-001: stream-text-basic fixture snapshot 1`] = `
"import { streamText } from 'ai';
import { anthropic } from '@ai-sdk/anthropic';

export default async function run({ model: __model_provider, sink: __sink } = {}) {
  for await (const __chunk of (streamText({ model: (__model_provider ?? anthropic('claude-haiku-4-5')), prompt: 'Hello' })).textStream) {
    __sink?.('out', __chunk);
  }
}
"
`;

exports[`generate(workspace) — L4 block codegen > BT-L4-002: agent-multi-step fixture snapshot 1`] = `
"import { generateText, tool, stepCountIs } from 'ai';
import { z } from 'zod';
import { anthropic } from '@ai-sdk/anthropic';

export default async function run({ model: __model_provider, sink: __sink } = {}) {
  __sink?.('output', (await generateText({ model: (__model_provider ?? anthropic('claude-haiku-4-5')), prompt: 'What\\'s the weather in Tokyo?', tools: { weather: tool({
    description: 'Get weather for a city',
    inputSchema: z.object({ city: z.string() }),
    execute: async (input) => {
        return '{ temp: 70, conditions: \\'sunny\\' }';
    }
  }) }, toolChoice: 'auto', stopWhen: stepCountIs(3) })).text);
}
"
`;

exports[`generate(workspace) — L4 block codegen > BT-L4-003: agent-has-tool-call-stop fixture snapshot 1`] = `
"import { generateText, tool, hasToolCall } from 'ai';
import { z } from 'zod';
import { anthropic } from '@ai-sdk/anthropic';

export default async function run({ model: __model_provider, sink: __sink } = {}) {
  __sink?.('output', (await generateText({ model: (__model_provider ?? anthropic('claude-haiku-4-5')), prompt: 'What\\'s the weather in Tokyo?', tools: { weather: tool({
    description: 'Get weather for a city',
    inputSchema: z.object({ city: z.string() }),
    execute: async (input) => {
        return '{ temp: 70, conditions: \\'sunny\\' }';
    }
  }) }, toolChoice: 'auto', stopWhen: hasToolCall('weather') })).text);
}
"
`;
